[project]
name = "llm-toolkit"
version = "0.1.0"
description = "A bunch of useful CLI AI tools I use daily"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gnureadline>=8.3.3",
    "json-repair>=0.59.5",
    "openai>=2.32.0",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.11",
]
